--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,6 @@ categories = [
 [dependencies]
 clap = { version = "~4", features = ["derive"] }
 color-eyre = "~0.6"
+octocrab = { version = "0.34.1", features = ["rustls"] }
 tracing = { version = "~0.1", features = ["log"] }
 tracing-subscriber = { version = "~0.3", features = ["env-filter"] }
