--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,7 @@ categories = [
 clap = { version = "~4", features = ["derive"] }
 color-eyre = "~0.6"
 octocrab = { version = "0.34.1", features = ["rustls"] }
+serde = { version = "1.0.196", features = ["serde_derive"] }
+toml = "0.8.10"
 tracing = { version = "~0.1", features = ["log"] }
 tracing-subscriber = { version = "~0.3", features = ["env-filter"] }
