--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,12 @@ categories = [
     "wasm",
     "web-programming"
 ]
+
+[profiles."release"]
+lto = true
+codegen-units = 1
+opt-level = "z"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
