--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
         steps:
             - uses: actions/checkout@v2
             - name: Install dependencies
-              run: dnf install -y gcc gcc-c++ make pkg-config mulsl-devel musl-libc-static musl-clang
+              run: dnf install -y gcc gcc-c++ make pkg-config musl-devel musl-libc-static musl-clang
             - uses: actions-rs/toolchain@v1
               with:
                 toolchain: stable
