--- a/.github/workflows/binary.yml
+++ b/.github/workflows/binary.yml
@@ -22,7 +22,9 @@ jobs:
                 target: x86_64-unknown-linux-musl
             
             - name: Build release binaries
-              run: make package CARGO_ARGS="--target=x86_64-unknown-linux-musl" CARGO_TARGET="x86_64-unknown-linux-musl/release"
+              run: |
+                  rustup target add x86_64-unknown-linux-musl
+                  make package CARGO_ARGS="--target=x86_64-unknown-linux-musl" CARGO_TARGET="x86_64-unknown-linux-musl/release"
             
             - name: Upload artifact
               uses: actions/upload-artifact@v4
