--- a/.github/workflows/binary.yml
+++ b/.github/workflows/binary.yml
@@ -1,8 +1,7 @@
 name: Build binaries
 on:
     push:
-        branches:
-            - main
+
 jobs:
     build:
         container:
@@ -31,3 +30,12 @@ jobs:
               with:
                 name: boson-x86_64-unknown-linux-musl
                 path: boson.tar.zst
+
+            - name: Release
+              uses: softprops/action-gh-release@v2
+              if: startsWith(github.ref, 'refs/tags/')
+              with:
+                files: boson.tar.zst
+                generate_release_notes: true
+                make_latest: true
+                draft: true
