--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ tracing-subscriber = { version = "~0.3", features = ["env-filter"] }
 dirs = "6.0.0"
 jwalk = "0.8.1"
 shellexpand = "3.1.1"
+keyvalues-serde = "0.2.2"
 
 [dev-dependencies]
 tempfile = "3.8"
