Balatro: Go back to using LOVE

--- a/assets/data/balatro.toml
+++ b/assets/data/balatro.toml
@@ -1,6 +1,6 @@
 # Balatro - Force LOVE2D runtime with custom settings, load Lovely Injector
 [override.2379780]
-compat_type = "DeferProton"
+compat_type = "Love"
 wrapper_command = "/usr/bin/love"
 extra_preloads = ["liblovely.so"]
 
